--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
   },
   "homepage": "https://github.com/ZhyJenae/shiny-fortnight#readme",
   "dependencies": {
-    "react-hot-loader": "^4.13.0",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.4.1",
     "mongodb": "^3.6.4",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
